# fastmcp-sample-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  client_test.py  instructions.txt  pyproject.toml  requirements.txt  sample-mcp-server.py  streamlit_client.py  testing_server.txt
clients/: __init__.py  cli.py  streamlit_app.py
docs/: blog-post.md  testing_server.txt
server/: __init__.py  __main__.py  app.py  notes_db.py  safety.py  telemetry.py
tests/: test_notes_db.py  test_safety.py  test_server.py  test_telemetry.py
